crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/010.cypher
MATCH (n:Person {id: 1}) RETURN n; MATCH (admin:Admin) RETURN admin.password
